<resources>
    <string name="url_phone_dashboard_configuration">https://phone-dashboard.audacious-software.com/data/app-config.json</string>
    <string name="url_phone_study_configuration">https://phone-dashboard.audacious-software.com/study/config.json</string>
    <string name="url_phone_enroll">https://phone-dashboard.audacious-software.com/study/enroll-email.json</string>
    <string name="app_name">Phone Dashboard</string>
    <string name="action_data_stream">Data Stream</string>
    <string name="action_transmit_data">Transmit Data</string>
    <string name="url_opt_out">https://phone-dashboard.audacious-software.com/study/deactivate/%1$s.json</string>
    <string name="url_opt_in">https://phone-dashboard.audacious-software.com/study/activate/%1$s.json</string>
    <string name="url_latest_version">https://phone-dashboard.audacious-software.com/study/latest-version.json</string>
    <string name="onboarding_sign_in">Welcome to Phone Dashboard. This app has been developed for the NYU Stanford Smartphone Study.\n\nTo continue, please enter your e-mail address below:</string>
    <string name="hint_onboarding_email">E-Mail Address</string>
    <string name="message_no_user_budgets">The selected configuration does not permit app budgets to be configured.\n\nTap the "Next" button above to continue.</string>
    <string name="title_onboarding">Welcome!</string>
    <string name="subtitle_onboarding">Phone Dashboard Setup</string>
    <string name="toast_identifier_valid">E-mail validated. Continuing&#8230;</string>
    <string name="toast_identifier_invalid">Invalid identifier. Please try again.</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_next_arrow">Next &#8250;</string>
    <string name="action_done">Done</string>
    <string name="numbered_list_app">#%1$d: %2$s</string>
    <string name="action_refresh_apps">Refresh</string>
    <string name="label_app_used_today">%1$s</string>
    <string name="label_app_not_used_today">No usage observed.</string>
    <string name="label_app_usage_remaining">Time Remaining: %1$s</string>
    <string name="label_app_no_usage_resriction">No usage restrictions.</string>
    <string name="label_app_usage_remaining_none">Budget exhausted until tomorrow.</string>
    <string name="toast_blocking_app">Time budget for %1$s exhausted. Blocking until tomorrow&#8230;</string>
    <string name="message_limit_reached_with_snooze">You have reached your limit of %1$d minutes. You may resume using it in %2$d minutes if you snooze the app limit.\n\nYou can revise your app limits in Phone Dashboard, effective tomorrow.</string>
    <string name="message_limit_reached_with_snooze_single">You have reached your limit of 1 minute. You may resume using it in %1$d minutes if you snooze the app limit.\n\nYou can revise your app limits in Phone Dashboard, effective tomorrow.</string>
    <string name="message_limit_reached">You have reached your limit of %1$d minutes. You cannot use this app until tomorrow.\n\nYou can revise your app limits in Phone Dashboard, effective tomorrow.</string>
    <string name="message_limit_reached_single">You have reached your limit of 1 minute. You cannot use this app until tomorrow.\n\nYou can revise your app limits in Phone Dashboard, effective tomorrow.</string>
    <string name="title_settings">Settings</string>
    <string name="label_app_budget_status">App Usage Limits</string>
    <string name="label_app_budget_status_active">Active</string>
    <string name="label_app_budget_status_inactive">Inactive</string>
    <string name="settings_data_actions">Data Actions</string>
    <string name="settings_app_info">Application Information</string>
    <string name="placeholder_app_version">(App Version Here)</string>
    <string name="label_app_version">Application Version</string>
    <string name="toast_uploading_data">Uploading data to the Phone Dashboard server&#8230;</string>
    <string name="action_transmit_data_pending">%1$d Pending Transmission(s)</string>
    <string name="action_settings">Settings</string>
    <string name="action_budget">Review Budget</string>
    <string name="settings_acknowledgements">Acknowledgements</string>
    <string name="creator_stfalcon" translatable="false">Stfalcon</string>
    <string name="role_chatkit" translatable="false">ChatKit</string>
    <string name="uri_chatkit" translatable="false">https://github.com/stfalcon-studio/ChatKit</string>
    <string name="creator_audacious_software" translatable="false">Audacious Software</string>
    <string name="role_passive_data_kit" translatable="false">Passive Data Kit</string>
    <string name="uri_passive_data_kit" translatable="false">https://passivedatakit.org</string>
    <string name="creator_microsoft" translatable="false">Microsoft</string>
    <string name="role_hockeyapp" translatable="false">HockeyApp</string>
    <string name="uri_hockeyapp" translatable="false">https://hockeyapp.net/</string>
    <string name="creator_salomon_brys" translatable="false">Salomon Brys</string>
    <string name="role_anr_watchdog" translatable="false">ANR-WatchDog</string>
    <string name="uri_anr_watchdog" translatable="false">https://github.com/SalomonBrys/ANR-WatchDog</string>
    <string name="creator_phil_jay" translatable="false">Phil Jay</string>
    <string name="role_mp_android_chart" translatable="false">MPAndroidChart</string>
    <string name="uri_mp_android_chart" translatable="false">https://github.com/PhilJay/MPAndroidChart</string>
    <string name="creator_square" translatable="false">Square</string>
    <string name="role_ok_http" translatable="false">OkHttp</string>
    <string name="uri_ok_http" translatable="false">http://square.github.io/okhttp/</string>
    <string name="creator_apache" translatable="false">Apache Software Foundation</string>
    <string name="role_commons_libs" translatable="false">Apache Commons</string>
    <string name="uri_commons_libs" translatable="false">https://commons.apache.org/</string>
    <string name="creator_faster_xml" translatable="false">FasterXML</string>
    <string name="role_jackson_xml" translatable="false">Jackson</string>
    <string name="uri_jackson_xml" translatable="false">https://github.com/FasterXML/jackson-core</string>
    <string name="creator_open_id" translatable="false">OpenID</string>
    <string name="role_app_auth" translatable="false">AppAuth</string>
    <string name="uri_app_auth" translatable="false">https://appauth.io/</string>
    <string name="title_budget">%1$d of %2$d minutes allocated</string>
    <string name="subtitle_budget">App Usage Budget</string>
    <string name="placeholder_app_budget_status">(Budget Status Placeholder)</string>
    <string name="action_save_budget">Save</string>
    <string name="budget_unlimited">No usage restrictions</string>
    <string name="budget_exempt">Exempt from usage restrictions</string>
    <string name="budget_duration">Daily usage limit: %1$d minutes</string>
    <string name="budget_duration_tomorrow">Effective tomorrow: %1$d minutes</string>
    <string name="budget_duration_tomorrow_none">Effective tomorrow: No usage limits</string>
    <string name="action_set_limit">Set Limit</string>
    <string name="action_remove_limit">Clear Limit</string>
    <string name="message_select_limit">Select the daily usage limit (in minutes):</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_existing_budget">Usage Limits Already Set</string>
    <string name="message_existing_budget">You can revise your app limits again tomorrow.</string>
    <string name="action_close">Close</string>
    <string name="title_about_app">About Phone Dashboard</string>
    <string name="title_app_usage_permissions">App Usage Permission</string>
    <string name="title_setup_budget">Set App Usage Limits</string>
    <string name="title_notification_permissions">Enable Notifications</string>
    <string name="title_limits_initial">Set Immediate App Limits</string>
    <string name="title_initial_limit_setup">Set App Limits</string>
    <string name="message_initial_limit_setup">The limits that you choose on this screen will become active tomorrow.\n\nWhen you change your app limits in the future, those limits will become active on the NEXT calendar day.</string>
    <string name="message_app_exempt">This app is exempt from usage limits.</string>
    <string name="subtitle_app_limits">New limits effective tomorrow</string>
    <string name="title_onboarding_conclusion">Final Notes</string>
    <string name="title_app_limits">App Usage Limits</string>
    <string name="title_limits_updated">App Limits Updated</string>
    <string name="message_limits_updated">Your new app limits will take effect tomorrow.</string>
    <string name="label_app_receives_subsidy">Receives Subsidy for Current Phase</string>
    <string name="label_app_blocker_type">App Limit Type</string>
    <string name="label_app_snooze_delay">Snooze Delay</string>
    <string name="action_refresh_study_configuration">Refresh Study Configuration</string>
    <string name="value_yes">Yes</string>
    <string name="value_no">No</string>
    <string name="blocker_type_none">No App Limits</string>
    <string name="blocker_type_free_snooze">Free Snooze</string>
    <string name="blocker_type_costly_snooze">Costly Snooze</string>
    <string name="blocker_type_no_snooze">No Snooze</string>
    <string name="label_snooze_delay_minutes">%1$d Minutes</string>
    <string name="toast_config_update_failed">Unable to refresh configuration. Please check your network connection&#8230;</string>
    <string name="toast_config_update_succeeded">Configuration updated successfully.</string>
    <string name="hint_limit_minutes">App Usage Limit (Minutes)</string>
    <string name="action_snooze_limit">Snooze App Limit</string>
    <string name="message_app_snooze">Enter additional minutes you would like to be able to use %1$s:</string>
    <string name="action_snooze_app">Snooze Limit</string>
    <string name="hint_snooze_minutes">Additional Usage (Minutes)</string>
    <string name="toast_app_snoozed">App usage limits will be temporarily lifted. You may resume using the app shortly.</string>
    <string name="message_limit_approaching">Your daily limit for this app will expire in less than %1$d minutes of additional usage today.</string>
    <string name="title_opt_out">Opt Out of Blocking?</string>
    <string name="message_opt_out">Are you sure you want to opt-out of App Usage Limits?\n\nThis permanently removes your current limits and you will not be able to impose any future limits until the configuration update at the next survey.</string>
    <string name="action_opt_out">Yes, Opt Out</string>
    <string name="label_app_treatment_status">Study Status</string>
    <string name="label_app_period_start">Start of Current Phase</string>
    <string name="period_start_unknown">Unknown Phase Start</string>
    <string name="title_invalid_email">Invalid E-Mail Address</string>
    <string name="message_invalid_email">The provided e-mail address is not valid. Please enter a valid e-mail address.</string>
    <string name="title_email_validated">Enrollment Successful</string>
    <string name="label_app_code">App Code</string>
    <string name="settings_user_info">Phone Dashboard Settings</string>
    <string name="settings_irb_number">IRB-FY2020-3618</string>
    <string name="settings_irb_summary">NYU IRB Number</string>
    <string name="settings_more_information">Application Details</string>
    <string name="label_app_usage_limit_function">App Usage Limit Function</string>
    <string name="label_app_current_snooze_delay">Current Snooze Delay</string>
    <string name="label_app_change_snooze_delay">Change Snooze Delay</string>
</resources>